# RUC-CompilerLab-2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
src/backend/: analyze.cpp  analyze.hpp  asm_generator.hpp  cfg.cpp  cfg.hpp  dfg.hpp  instruction_generator.hpp  instructions.cpp  instructions.hpp  ir_parser.hpp  linear_scan.hpp  local_var.cpp  local_var.hpp  optimizer.hpp  reg_manage.hpp  registers.cpp  registers.hpp  stack_frame.hpp  symbols.hpp  utils.hpp
src/frontend/: AST.cpp  AST.hpp  SysY.lpp  SysY.ypp  ir_generator.hpp  ir_string.cpp  ir_string.hpp  parser_ctx.cpp  parser_ctx.hpp  return.hpp  scope.hpp  symbol.hpp  utils.hpp
